# PastFm

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  api.py  config.py  db.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
app/: __init__.py  api.py
extension/: background.js  index.html  manifest.json  script.js
server/: Dockerfile  PastFm-DB.db  README.md  api.py  db.py  main.py  pyproject.toml  utils.py
server/templates/: default_theme.html
static/: __init__.py
templates/: default_theme.html
utils/: __init__.py  lastfm.py  logging_config.py  visualization.py
